--- a/app/views/polls/index.html.erb
+++ b/app/views/polls/index.html.erb
@@ -1,6 +1,11 @@
-<h2>this is the polls (non-api) page </h2>
+<h2>this is the polls index page </h2>
+<%= react_component 'Main' %>
+
+
 
 <script>
+/*
+  this works and is left for reassurance
   $.ajax({
     url: '/polls.json',
     type: 'GET',
@@ -8,4 +13,5 @@
       console.log(data);
     }
   });
+*/
 </script>
