crude poll index components

--- a/app/assets/stylesheets/polls.scss
+++ b/app/assets/stylesheets/polls.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Polls controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.poll-index-header{
+  background: orange;
+}
+
+.poll-index-item{
+  background: lightyellow;
+}
+
+.long-button{
+  width: 90%;
+}
