--- a/app/views/polls/index.html.erb
+++ b/app/views/polls/index.html.erb
@@ -1,17 +1,3 @@
 <h2>this is the polls index page </h2>
-<%= react_component 'Main' %>
+<%= react_component 'PollIndex' %>
 
-
-
-<script>
-/*
-  this works and is left for reassurance
-  $.ajax({
-    url: '/polls.json',
-    type: 'GET',
-    success: function(data){
-      console.log(data);
-    }
-  });
-*/
-</script>
