--- a/app/assets/stylesheets/polls.scss
+++ b/app/assets/stylesheets/polls.scss
@@ -13,3 +13,15 @@
 .long-button{
   width: 90%;
 }
+
+.title{
+  background: lightblue;
+}
+
+.candidate{
+  background: lightyellow;
+}
+
+.buttonArray {
+  background: lightgreen;
+}
