cancel poll creation

--- a/app/views/polls/new.html.erb
+++ b/app/views/polls/new.html.erb
@@ -1,2 +1,2 @@
 <h2>this is the create a poll (new) page </h2>
-<%= react_component 'NewPollContainer' %>
+<%= react_component 'NewPollContainer', {blanks: [{name: ''}, {name: ''}]} %>
