--- a/app/views/polls/index.html.erb
+++ b/app/views/polls/index.html.erb
@@ -1,3 +1,4 @@
 <h2>this is the polls index page </h2>
-<%= react_component 'PollIndex' %>
+<% debug(@polls) %>
+<%= react_component 'PollIndex', {polls: @polls},{prerender: true} %>
 
