delete from crude dashboard

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
               <%= link_to 'New Poll', new_poll_path %>
             </li>
             <li>
-              <%= link_to 'My Polls', '#' %>
+              <%= link_to 'Poll Manager', dashboard_path %>
             </li>
             <li>
               <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
