display result chart after user votes

--- a/app/assets/stylesheets/polls.scss
+++ b/app/assets/stylesheets/polls.scss
@@ -46,3 +46,11 @@ button:disabled{
   margin: 10px;
   border: 1px solid black;
 }
+
+#chart {
+  height: 200px;
+}
+
+#chart2 {
+  height: 200px;
+}
