--- a/app/views/polls/show.html.erb
+++ b/app/views/polls/show.html.erb
@@ -1,2 +1,2 @@
 <h2>showing a poll</h2>
-<%= react_component 'Poll', {poll: @poll, candidates: @candidates, user: current_user} %>
+<%= react_component 'Poll', {poll: @poll.as_json, candidates: @candidates, user: current_user} %>
