--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
   <title>BallotBox</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <script src="https://use.fontawesome.com/1fcdda0e6d.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Itim|Kalam|Lato" rel="stylesheet">  
   <%= csrf_meta_tags %>
 </head>
 <body>
