--- a/app/assets/stylesheets/polls.scss
+++ b/app/assets/stylesheets/polls.scss
@@ -105,7 +105,7 @@ a.navbar-brand {
 }
 
 .candidate{
-  background: lightyellow;
+  margin-bottom: 10px;
 }
 
 .buttonArray {
@@ -117,7 +117,20 @@ button:disabled{
 }
 
 .add-candidate{
+  margin-bottom: 10px;
+}
 
+.custom-candidate-input {
+  width: 60%;
+  display: inline-block;
+}
+
+.btn-candidate {
+  margin-bottom: 4px;
+}
+
+.btn-custom-candidate {
+  margin-left: 4px;
 }
 
 .poll-detail{
