--- a/app/assets/stylesheets/polls.scss
+++ b/app/assets/stylesheets/polls.scss
@@ -15,6 +15,7 @@ $well-color: #F5FEEB;
 
 body{
   font-family: 'Lato', sans-serif;
+  font-size: 16px;
 }
 
 .panel-heading > h3{
@@ -26,14 +27,15 @@ body{
   border-radius: 12px;  
 }
 
-.poll > h3{
+.poll > h3, .well > h3, .dashboard h3{
   font-family: 'Kalam', cursive;
 }
 
+/*
 .dashboard h3{
   font-family: 'Kalam', cursive; 
 }
-
+*/
 .dashboard-item {
   background-color: $poll-item-color;
   border-radius: 12px;   
