--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,4 +1,4 @@
-<div class='container col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2'>
+<div class='col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2'>
   <div class="panel panel-info">
     <div class="panel-heading">
       <h3>Resend unlock instructions</h3>
