--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,8 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <script src="https://use.fontawesome.com/1fcdda0e6d.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Itim|Kalam|Lato" rel="stylesheet">  
+  <link href="https://fonts.googleapis.com/css?family=Itim|Kalam|Lato" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">    
   <%= csrf_meta_tags %>
 </head>
 <body>
